--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
           <a class="header-nav-link" href="./customers.html">Customers</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="">Resources</a>
+          <a class="header-nav-link" href="#">Resources</a>
         </li>
       </ul>
     </nav>
